# mobile-nano-vlm

./: .gitignore  .gitmodules  README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/minimind/vlm/: ChatAdapter.java  ChatMessage.java  MainActivity.java  ModelRunner.java
android/app/src/main/res/layout/: activity_main.xml  item_message_assistant.xml  item_message_user.xml
android/app/src/main/res/values/: strings.xml  themes.xml
docker/: Dockerfile
scripts/: build.sh  run_setup.sh  vison_mnn_convert.sh  vison_pipeline_convert.sh  vison_pipeline_mnn_convert.sh
src/: CMakeLists.txt  main.cpp
src/common/: stb_image.cpp  types.h
src/llm/: llm_runtime.cpp  llm_runtime.h
src/pipeline/: pipeline.cpp  pipeline.h
src/preprocess/: image_preprocess.cpp  image_preprocess.h
src/vision/: vision_encoder.cpp  vision_encoder.h
utils/: export_llm_onnx.py  export_minimind_mnn.py  export_vision_pipeline_onnx.py  minimind_mnn_export.py  vision_pipeline.py
